2002-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Update to use Automake 1.6.2

2002-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Try harder when searching for Ghostscript fonts under Linux.

2002-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Identify PICT files via magic.mgk.

2002-06-18  Cristy  <cristy@mystic.es.dupont.com>
  * Added PerlMagick threading support (patch by Doug MacEachern).

2002-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * CLIPBOARD and EMF modules compile under MinGW and Cygwin.

2002-06-14  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * The wbmp writer would dump core if it received a DirectClass image
    that contained only black and white pixels, because no colormap exists.

2002-06-09  Cristy  <cristy@mystic.es.dupont.com>
  * Label color could not be set (bug report by Ron Savage).
  * Added CatchException() method to magick/error.c.

2002-06-06  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.6-1 released.

2002-06-05  Cristy  <cristy@mystic.es.dupont.com>
  * Added -encoding option to command line utilities.

2002-06-02  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.6 released.

2002-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * ImageMagick may now be built (static build only) using the
    free MinGW development package from http://www.mingw.org.
    Leonard's "clipboard" coder is included in the build.

2002-05-28  Leonard Rosenthol  <leonardr@lazerware.com>
  * Added new "clipboard" coder for reading/writing the system's
    clipboard.  Currently this is only implemented on Windows.
    For example:  'convert logo: clipboard:', 'convert clipboard: foo.png'

2002-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Support autotrace via delegates.mgk.
    For example:  'convert autotrace:file.png file.mvg'

2002-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added progress monitor support to DrawImage().
